# sprint-app-v3

./: .gitignore  .jcodemunch.jsonc  AGENTS.md  package.json
.agent-work/: conversation.json  usage-stats.jsonl
.agent-work/copilot/: config.json  mcp-config.json
.agent-work/copilot/agents/: intellij-default.md  intellij-edit.md  intellij-explore.md
.agent-work/copilot/session-state/12fb77a3-7ae7-48a3-bfb4-b7e11ae0bad4/: events.jsonl  workspace.yaml
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/paul/sprintsync/: MainActivity.kt  SprintSyncApp.kt
android/app/src/main/kotlin/com/paul/sprintsync/core/common/: AppUpdateChecker.kt
android/app/src/main/kotlin/com/paul/sprintsync/core/database/: LocalRepository.kt
android/app/src/main/kotlin/com/paul/sprintsync/core/network/: TcpConnectionsManager.kt
android/app/src/test/kotlin/com/paul/sprintsync/: MainActivityMonitoringLogicTest.kt  SprintSyncAppLayoutLogicTest.kt
android/app/src/test/kotlin/com/paul/sprintsync/sensor_native/: SensorNativeControllerPreviewTimingTest.kt  SensorNativeMathTest.kt
desktop-tauri/: package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: commands.rs
desktop-tauri/ui/src/: App.tsx
desktop-tauri/ui/src/api/: mockApi.ts  types.ts
desktop-tauri/ui/src/components/: RaceTimerPanel.tsx
graphify-out/: GRAPH_REPORT.md  graph.json
scripts/: build-android-jni.mjs  build-android-jni.sh  install-debug-apk.mjs  install-debug-devices-adb.mjs
(+35 files in other folders)
