[package]
name = "sprint-sync-windows-desktop-tauri"
version = "0.2.2"
description = "Sprint Sync Tauri Desktop Backend"
authors = ["paul"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"
regex = "1.11"
russcip = { version = "0.9.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
 sprint-sync-protocol = { path = "../../crates/sprint-sync-protocol" }
specta = { version = "2.0.0-rc.20", features = ["derive", "serde_json"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
tauri-specta = { version = "2.0.0-rc.20", features = ["typescript"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
